src/core-crm/objects/Lead_Score_Configuration__c/Lead_Score_Configuration__c.object-meta.xml
<CustomObject>
    <label>Lead Score Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Lead Score Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>