src/core-crm/objects/Lead_Score_Configuration__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The description of the record and it’s usage in scoring</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>