src/core-crm/objects/Lead_Score_Configuration__c/fields/Domestic_International__c.field-meta.xml
<CustomField>
    <fullName>Domestic_International__c</fullName>
    <description>Whether the configuration is related to Domestic or International scoring scheme</description>
    <label>Domestic or International</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>International</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>