src/core-crm/objects/Lead_Score_Configuration__c/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <description>The max score a category is allowed to accumulate</description>
    <label>Max Score</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>