src/core-crm/objects/Lead_Score_Configuration__c/fields/Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Parent Category the sub category belongs to. This would be null for category record types</description>
    <inlineHelpText>The Category the scoring for this Sub Category will be added to</inlineHelpText>
    <label>Parent Category</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Lead_Score_Configuration__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Category</value>
        </filterItems>
        <filterItems>
            <field>Lead_Score_Configuration__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Configuration</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Lead_Score_Configuration__c</referenceTo>
    <relationshipLabel>Lead Score Configurations</relationshipLabel>
    <relationshipName>Lead_Score_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>