src/core-crm/objects/Lead_Score_Configuration__c/fields/Score_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Score_Allocation__c</fullName>
    <description>Score that should be allocated for each instance of the interaction</description>
    <label>Score Allocation</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>