src/core-crm/objects/Lead_Score_Configuration__c/fields/Study_Level__c.field-meta.xml
<CustomField>
    <fullName>Study_Level__c</fullName>
    <description>The level of education is used to determine the sub scheme the scoring configuration belongs.</description>
    <label>Study Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undergraduate</fullName>
            </value>
            <value>
                <fullName>Postgraduate</fullName>
            </value>
            <value>
                <fullName>Undetermined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>