src/core-crm/objects/Lead_Score_Configuration__c/fields/Time_Limit_Months__c.field-meta.xml
<CustomField>
    <fullName>Time_Limit_Months__c</fullName>
    <description>The number months the calculation needs to consider activities for from current month</description>
    <label>Time Limit (Months)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>