src/core-crm/objects/Lead_Score_Configuration__c/recordTypes/Category.recordType-meta.xml
<RecordType>
    <fullName>Category</fullName>
    <active>true</active>
    <label>Category</label>
</RecordType>