src/core-crm/objects/Lead_Score_Configuration__c/recordTypes/Configuration.recordType-meta.xml
<RecordType>
    <fullName>Configuration</fullName>
    <active>true</active>
    <label>Configuration</label>
</RecordType>