src/core-crm/objects/Lead_Score_Configuration__c/recordTypes/Sub_Category.recordType-meta.xml
<RecordType>
    <fullName>Sub_Category</fullName>
    <active>true</active>
    <label>Sub Category</label>
</RecordType>