src/core-crm/objects/Lead_Score_Configuration__c/validationRules/Category_Parent_Category_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Category_Parent_Category_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;Category&quot;,  OR( ISBLANK( Parent_Category__c ) ,  Parent_Category__r.RecordType.DeveloperName != &quot;Configuration&quot;))</errorConditionFormula>
    <errorDisplayField>Parent_Category__c</errorDisplayField>
    <errorMessage>Parent Configuration is required for Category record type</errorMessage>
</ValidationRule>