src/core-crm/objects/Lead_Score_Configuration__c/validationRules/Sub_Category_Parent_Category_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Sub_Category_Parent_Category_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;Sub_Category&quot;,  OR( ISBLANK( Parent_Category__c ) ,  Parent_Category__r.RecordType.DeveloperName != &quot;Category&quot;))</errorConditionFormula>
    <errorDisplayField>Parent_Category__c</errorDisplayField>
    <errorMessage>Parent Category is required for Sub Category record type</errorMessage>
</ValidationRule>