src/core-crm/objects/Lead_Score_Configuration__c/listViews/International_Postgraduate.listView-meta.xml
<ListView>
    <fullName>International_Postgraduate</fullName>
    <columns>RECORDTYPE</columns>
    <columns>Parent_Category__c</columns>
    <columns>NAME</columns>
    <columns>Score_Allocation__c</columns>
    <columns>Max_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Domestic_International__c</field>
        <operation>equals</operation>
        <value>International,Undetermined</value>
    </filters>
    <filters>
        <field>Study_Level__c</field>
        <operation>equals</operation>
        <value>Postgraduate,Undetermined</value>
    </filters>
    <label>International Postgraduate</label>
    <sharedTo>
        <group>Future_Students_International</group>
    </sharedTo>
</ListView>